[workspace]
members = [
]

[package]
name = "htp"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false
license-file = "LICENSE"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]


[dependencies]
libc = "0.2"
bitflags = "1.2.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "transactions"
harness = false
