[workspace]
members = [
]

[package]
name = "htp"
authors = ["C2Rust"]
version = "2.0.0"
publish = false
edition = "2018"
autobins = false
license-file = "LICENSE"
description = "libhtp-rs"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = []

[dependencies]
base64 = "0.12.3"
bitflags = "1.2.1"
bstr = "0.2"
libc = "0.2"
nom = "5.1.1"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
cbindgen = { version = "0.14.1", optional = true }
cdylib-link-lines = "0.1.1"

[[bench]]
name = "transactions"
harness = false
